# 3D-thin-walls-detection

./: CMakeLists.txt  README.md  readme
src/: main.cpp  thinwalls.cpp  thinwalls.h
